2010-03-12  John Oliver <joliver@tresys.com>

	* Ensure architecture independent parts of python SWIG wrapper
	  get installed into the same directory as the architecture
	  dependent parts.

2010-03-12  Chris PeBenito <cpebenito@tresys.com>

	* Fix seaudit/libseaudit headers.

2010-03-02  John Oliver <joliver@tresys.com>

	* Fix error message when Tk can not be loaded by apol.  Make it
	  clear that it is Tk, not an SETools library that connot be loaded.

2010-03-01  John Oliver <joliver@tresys.com>

	* Fix error in Apol which would disable new and updated search
	  buttons in rule search.

2009-12-09  John Oliver <joliver@tresys.com>

	* Fix seaudit-report to correctly handle -c and --config
	  options.

2009-07-22  Chris PeBenito <cpebenito@tresys.com>

	* SETools 3.3.6.

2009-07-16  Chris PeBenito <cpebenito@tresys.com>

	* Change default log for seaudit to /var/log/audit/audit.log.

2009-07-16  Chris PeBenito <cpebenito@tresys.com>

	* Change context parsing in libseaudit to use libselinux functions.

2009-06-04  Jeremy Solt <jsolt@tresys.com>

	* Add support for display of level and clearance of contexts to seaudit.
	* Add support for filterting by level and clearance to seaudit.

2009-05-26  Jeremy Solt <jsolt@tresys.com>

	* Modified seaudit to show the raw audit message when doubleclicking
	an entry.

2009-05-19  Steve Lawrence <slawrence@tresys.com>

	* Add libqpol and libapol support for policy capabilites and
	permissive domains.
	* Add policy capabilities and permissive domains querying to seinfo.

2009-05-15  Jeremy Solt <jsolt@tresys.com>

	* Add support for using attribute names available in version 24
	binary policies.

2008-09-11  J. Tang  <jtang@tresys.com>

	* Fixed error in qpol_policy_rebuild_opt() where a policy's
	neverallow rules are expanded when the rebuild option is
	QPOL_POLICY_OPTION_NO_RULES.

2008-08-15  J. Tang  <jtang@tresys.com>

	* This is the official release of SETools 3.3.5.
